# A2ARegistry

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  INSTALLATION.md  Makefile  QUALITY_CHECKS.md  README.md  activate_env.sh  docker-compose.yml  env.example
.github/workflows/: ci.yml  release.yml
alembic/: env.py
app/: config.py
examples/crewai-and-langchain-examples/: README.md  agent_runner_example.py  customer_service_demo.py  quick_start.sh
examples/crewai-and-langchain-examples/shopify-status-agent/: README.md  env.sample  pyproject.toml  register_with_a2a.py  simple_server.py
examples/crewai-and-langchain-examples/shopify-status-agent/app/: agent.py  config.py  llm.py  schemas.py  server.py
examples/crewai-and-langchain-examples/shopify-status-agent/app/static/: app.js  styles.css
examples/crewai-and-langchain-examples/shopify-status-agent/app/templates/: index.html
examples/crewai-and-langchain-examples/shopify-status-agent/app/tools/: shopify.py
examples/crewai-and-langchain-examples/shopify-status-agent/tests/: test_agent.py  test_shopify_tools.py
examples/crewai-and-langchain-examples/ups-tracking-agent/: README.md  env.example  pyproject.toml  register_with_a2a.py  server.py  simple_server.py
examples/crewai-and-langchain-examples/ups-tracking-agent/src/ups_agent/: __init__.py  agent.py  cli.py  client.py  config.py  models.py  normalizer.py
examples/crewai-and-langchain-examples/ups-tracking-agent/tests/: test_cli.py  test_client_auth.py  test_normalization.py
k8s/: README-BUILD.md  README.md  build-images.sh  configmap.yaml  deploy.sh  ingress.yaml  kustomization.yaml  namespace.yaml  opensearch-deployment.yaml  postgres-deployment.yaml  redis-deployment.yaml  registry-deployment.yaml  runner-deployment.yaml  ui-deployment.yaml
registry/: Dockerfile.registry  database.py  main.py
registry/api/: agents.py
registry/core/: caching.py  exceptions.py  logging.py
registry/schemas/: agent_card_spec.py
runner/: Dockerfile.runner  requirements.txt  start_runner.sh  test_customer_service_e2e.py
scripts/: delete_all_agents.py  init_db.py  validate_agent_card.py
tests/: base_test.py  test_agent_service.py  test_agents_api.py  test_auth_api.py  test_auth_jwks.py  test_auth_service.py  test_card_service.py  test_health_api.py  test_models.py  test_registry_service.py  test_schemas.py  test_sdk_client.py  test_sdk_exceptions.py  test_sdk_publisher.py  test_search_api.py  test_search_index_service.py  test_security.py  test_well_known_api.py
ui/: .env.local_  Dockerfile  README.md  next.config.js  package-lock.json  package.json
(+77 files in other folders)
